adds html versions

--- a/Module 3/1.3 Objective 3.html
+++ b/Module 3/1.3 Objective 3.html
@@ -8,21 +8,23 @@
 
 <p>Bias in LLMs refers to the systematic and undue preference or prejudice toward certain ideas, groups, or concepts. It can manifest in various ways:</p>
 
-<h3>1. <strong>Data-Driven Bias</strong></h3>
+<h4>1. <strong>Data-Driven Bias</strong></h4>
 
-<p>LLMs are trained on vast datasets collected from the internet, reflecting the biases present in those texts. This includes gender, racial, cultural, or ideological biases.</p>
+<p>LLMs are trained on vast datasets collected from the internet, reflecting the biases in those texts. This includes gender, racial, cultural, or ideological biases.</p>
 
-<h3>2. <strong>Design Bias</strong></h3>
+<h4>2. <strong>Design Bias</strong></h4>
 
 <p>The choices made during the design and training processes can inadvertently introduce biases, such as emphasizing certain domains or underrepresenting others.</p>
 
-<h3>3. <strong>Interaction Bias</strong></h3>
+<h4>3. <strong>Interaction Bias</strong></h4>
 
-<p>The way users interact with the model and the feedback loop created by those interactions can further reinforce or create new biases.</p>
+<p>How users interact with the model and the feedback loop created by those interactions can further reinforce or create new biases.</p>
 
-<h2>Implications of Bias</h2>
+<p>Bias in LLMs is a multifaceted issue arising from the data they are trained on, the design choices made during their development, and their interactions with users. These biases pose limitations and ethical concerns that must be carefully considered in the broader context of LLM applications.</p>
 
-<p>Biases in LLMs have serious implications:</p>
+<h3>Implications of Bias</h3>
+
+<p>Having explored the various forms of bias in LLMs, it’s important to understand the consequences these biases have. These implications are not just theoretical but pose real-world challenges, ranging from ethical dilemmas to legal ramifications and issues of public trust.</p>
 
 <ol>
 <li><strong>Ethical Concerns</strong>: Biases can lead to unfair or discriminatory outcomes, raising ethical dilemmas.</li>
@@ -30,9 +32,9 @@
 <li><strong>Public Trust</strong>: Bias can undermine trust in AI systems, hindering their adoption and use.</li>
 </ol>
 
-<h2>Addressing Bias</h2>
+<h3>Addressing Bias</h3>
 
-<p>Efforts to mitigate biases include:</p>
+<p>Tackling the issue of bias is crucial for the responsible development and deployment of LLMs. Let’s now look at strategies and approaches aimed at addressing bias.</p>
 
 <ol>
 <li><strong>Diverse Training Data</strong>: Ensuring diversity in the training data can help reduce imbalances and reflections of societal biases.</li>
@@ -42,7 +44,7 @@
 
 <h2>Limitations of LLMs</h2>
 
-<p>Apart from biases, LLMs have intrinsic limitations:</p>
+<p>Stepping away from LLM bias, it’s also important to recognize LLM’s limitations. Despite their text generation and analysis prowess, LLMs come with inherent shortcomings like data dependency, environmental impact, and accessibility. Understanding these limitations provides a more comprehensive understanding of the challenges of employing LLMs.</p>
 
 <h3>1. <strong>Understanding vs. Mimicking</strong></h3>
 
@@ -58,7 +60,7 @@
 
 <h3>4. <strong>Accessibility and Cost</strong></h3>
 
-<p>The complexity and computational demands of LLMs can make them inaccessible to small organizations or individual researchers.</p>
+<p>LLMs' complexity and computational demands can make them inaccessible to small organizations or individual researchers.</p>
 
 <h2>Conclusion</h2>
 
@@ -66,4 +68,4 @@
 
 <p>Efforts to identify and mitigate biases, along with a realistic assessment of the models' limitations, are key to harnessing the potential of LLMs. Ongoing research, collaboration, and dialogue among developers, regulators, users, and affected communities will be vital in navigating these complex issues.</p>
 
-<p>The journey towards more fair, transparent, and responsible AI is a shared responsibility that requires vigilance, empathy, and innovation. By acknowledging and addressing biases and limitations, we can work towards a future where LLMs are not only powerful tools but also aligned with our collective values and goals.</p>
+<p>The journey towards more fair, transparent, and responsible AI is a shared responsibility that requires vigilance, empathy, and innovation. By acknowledging and addressing biases and limitations, we can work towards a future where LLMs are powerful tools and aligned with our collective values and goals.</p>
