--- a/Module 3/3.1 Module Project.html
+++ b/Module 3/3.1 Module Project.html
@@ -27,7 +27,7 @@
 <li><p><strong>Brainstorming Session</strong></p>
 
 <ul>
-<li>Use ChatGPT to brainstorm potential project ideas within your chosen domain.</li>
+<li>Use ChatGPT to brainstorm potential LLM project ideas within your chosen domain.</li>
 <li>Pose questions to the model like, "What are some unique ways to use AI in healthcare?" or "How could machine learning improve public transportation?"</li>
 <li>Take notes during the brainstorming session for later review.</li>
 </ul></li>
@@ -37,7 +37,7 @@
 <li>Choose at least three project ideas that interest you.</li>
 <li>Engage with ChatGPT to explore these ideas in more depth.
 <ul>
-<li>For example, ask, "What would be the steps to use AI for real-time language translation in emergency services?"</li>
+<li>e.g., "What would be the steps to use AI for real-time language translation in emergency services?"</li>
 </ul></li>
 </ul></li>
 <li><p><strong>Documentation</strong></p>
@@ -54,7 +54,7 @@
 <li><p><strong>Peer Review (stretch goal)</strong></p>
 
 <ul>
-<li>Share your documented ideas with classmates for a review and gather constructive feedback.</li>
+<li>Share your documented ideas with classmates or a friend for a review and gather constructive feedback.</li>
 </ul></li>
 <li><p><strong>Final Refinement</strong></p>
 
