--- a/Module 4/1.2 Objective 2.html
+++ b/Module 4/1.2 Objective 2.html
@@ -26,8 +26,6 @@
 
 <p>When you make an API call using the SDK, you receive a response object. This object contains various pieces of information, including the generated text.</p>
 
-<h3>Extracting Generated Text</h3>
-
 <p>To extract the generated text from the response object, you can use the following code snippet:</p>
 
 <pre><code>import openai
@@ -60,16 +58,6 @@ generated_text = extract_reply(response)
 
 <h2>Error Handling</h2>
 
-<h3>Common Error Types</h3>
-
-<ul>
-<li><code>RateLimitExceeded</code>: You've exceeded the number of requests permitted in a given time frame.</li>
-<li><code>ResourceNotFound</code>: The engine specified does not exist.</li>
-<li><code>InvalidRequestError</code>: The API request was malformed.</li>
-</ul>
-
-<h3>SDK-specific Error Handling</h3>
-
 <p>To handle errors gracefully, you can use Python's try-except blocks. Here's an example:</p>
 
 <pre><code>import openai
@@ -85,6 +73,14 @@ except openai.OpenAIError as e:
     print(f"An error occurred: {e}")
 
 </code></pre>
+
+<p>You may need to account for more common errors; errors you might find in any API. Here is the short list of those errors you may encounter:</p>
+
+<ul>
+<li><code>RateLimitExceeded</code>: You've exceeded the number of requests permitted in a given time frame.</li>
+<li><code>ResourceNotFound</code>: The engine specified does not exist.</li>
+<li><code>InvalidRequestError</code>: The API request was malformed.</li>
+</ul>
 
 <h2>Advanced SDK Usage</h2>
 
